# KuzongaX

./: README.md  pyproject.toml  setup.py
.github/workflows/: kuzongax_pipeline.yml
kuzongax/: __init__.py
kuzongax/challenge_maker/: challenge_maker.py
kuzongax/challenges/2026-03/: 13.json
kuzongax/envs/: __init__.py  kuzongax_main.py
kuzongax/evaluation/: evaluator.py
kuzongax/grading/: grader.py
kuzongax/ground_truth/: ground_truth.py
kuzongax/inspection/: inspector.py
kuzongax/leaderboards/2025-11/: 19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  average_proximity.csv  average_score.csv
kuzongax/leaderboards/2025-12/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  3.csv  4.csv  5.csv  6.csv  8.csv  9.csv  average_proximity.csv  average_score.csv
kuzongax/leaderboards/2026-03/: 13.csv  average_proximity.csv  average_score.csv
kuzongax/llm_api/: client_class.py  requestor.py
kuzongax/results/2026-03/: 13.json
kuzongax/simulator/: kuzongaenv_simulator.py
kuzongax/utils/: util.py
tests/challenge_maker/: test.py
tests/evaluation/: evaluation_test.py
tests/kuzongax_main_folder/: kuzongax_main.py
tests/llm_api/: test.py
tests/simulator/: test.py
